# workshop

./: CMakeLists.txt  xmake.lua
include/fmt/: base.h  ranges.h
others/stdmodule/: std.mock.cppm
work1/: 1.cpp  任务说明.md
work2/: 2.cpp  任务说明.md
work3/: animal.cppm  main.cpp  main2.cpp  任务说明.md
work4/: main.cpp  任务说明.md
work4/export_using_declartion/: fmt.cppm
work4/implementation_unit/: main.cpp
work4/implementation_unit/my_lib/: bar.cpp  foo.cpp  my_lib.cppm
work4/interface_unit/: main.cpp  main2.cpp
work4/interface_unit/my_lib/: my_lib.cppm
work4/interface_unit/my_lib/impl/: bar.cppm  foo.cppm
work5/: main.cpp  任务说明.md
work5/export_extern_cpp/: fmt.cppm
work5/implementation_unit/my_lib/: bar.cpp
work5/partition_unit/: main.cpp
work5/partition_unit/my_lib/: bar.cppm  foo.cppm  my_lib.cppm
参考代码/work2/: 2.cpp
参考代码/work3/: animal.cppm
参考代码/work4/implementation_unit/my_lib/: bar.cpp
参考代码/work5/export_extern_cpp/: fmt.cppm
参考答案/work1/: 1.cpp
参考答案/work4/export_extern_cpp/: fmt.cppm
参考答案/work4/export_using_declartion/: fmt.cppm
参考答案/work5/: 任务说明.md
参考答案/work5/implementation_unit/my_lib/: bar.cpp
参考答案/work5/interface_unit/: main2.cpp
参考答案/work5/interface_unit/my_lib/: my_lib.cppm
参考答案/work5/partition_unit/my_lib/: bar.cppm  foo.cppm  my_lib.cppm
